added onnx export for deta

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -37,6 +37,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - Deberta
 - Deberta-v2
 - Deit
+- Deta
 - Detr
 - DistilBert
 - Donut-Swin
