--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -12,17 +12,37 @@ specific language governing permissions and limitations under the License.
 
 # 🤗 Optimum
 
-🤗 Optimum is an extension of [Transformers](https://huggingface.co/docs/transformers) that provides a set of performance optimization tools to train and run models on targeted hardware with maximum efficiency.
+🤗 Optimum is a collection of libraries that enables you to very easily deploy and optimize your models on various cloud providers and hardware accelerators.
 
-The AI ecosystem evolves quickly, and more and more specialized hardware along with their own optimizations are emerging every day.
-As such, Optimum enables developers to efficiently use any of these platforms with the same ease inherent to Transformers.
-
-🤗 Optimum is distributed as a collection of packages - check out the links below for an in-depth look at each one.
+Check out the sections below to learn more about our cloud, hardware and on-prem partners.
+You can reach out to [hardware@huggingface.co](mailto:hardware@huggingface.co) to request more information about our current and future partnerships.
 
 
-## Hardware partners
+## Cloud Partners
 
-The packages below enable you to get the best of the 🤗 Hugging Face ecosystem on various types of devices.
+<div class="mt-10">
+  <div class="w-full flex flex-col space-y-4 md:space-y-0 md:grid md:grid-cols-2 md:gap-y-4 md:gap-x-5">
+    <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="https://huggingface.co/amazon"
+      ><div class="w-full text-center bg-gradient-to-br from-green-600 to-green-600 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">AWS</div>
+      <p class="text-gray-700">Deploy your models in a few clicks on AWS with <span class="underline" onclick="event.preventDefault(); window.open('https://huggingface.co/docs/sagemaker/index', '_blank');">SageMaker</span>.</p>
+    </a>
+    <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="https://huggingface.co/docs/google-cloud/index"
+      ><div class="w-full text-center bg-gradient-to-br from-red-600 to-red-600 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">GCP</div>
+      <p class="text-gray-700">Build your own AI with the latest open models from Hugging Face and the latest cloud and hardware features from Google Cloud.</p>
+    </a>
+    <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="https://azure.microsoft.com/en-us/solutions/hugging-face-on-azure"
+      ><div class="w-full text-center bg-gradient-to-br from-blue-400 to-blue-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Azure</div>
+      <p class="text-gray-700">Deploy machine learning models to a dedicated endpoint with the enterprise-grade infrastructure of Azure.</p>
+    </a>
+    <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="https://huggingface.co/Cloudflare"
+      ><div class="w-full text-center bg-gradient-to-br from-orange-400 to-orange-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Cloudflare</div>
+      <p class="text-gray-700">Serverless inference for AI models.</p>
+    </a>
+  </div>
+</div>
+
+
+## Hardware Partners
 
 <div class="mt-10">
   <div class="w-full flex flex-col space-y-4 md:space-y-0 md:grid md:grid-cols-4 md:gap-y-4 md:gap-x-5">
@@ -59,6 +79,18 @@ The packages below enable you to get the best of the 🤗 Hugging Face ecosystem
 
 > [!TIP]
 > Some packages provide hardware-agnostic features (e.g. INC interface in Optimum Intel).
+
+
+## On-prem Partners
+
+<div class="mt-10">
+  <div class="w-full flex flex-col space-y-4 md:space-y-0 md:grid md:grid-cols-1 md:gap-y-4 md:gap-x-5">
+    <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="https://dell.huggingface.co/"
+      ><div class="w-full text-center bg-gradient-to-br from-green-600 to-green-600 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Dell</div>
+      <p class="text-gray-700">The Dell Enterprise Hub features custom, ready-to-deploy containers and scripts that facilitate the easy, secure deployment of open-source models available on Hugging Face.</p>
+    </a>
+  </div>
+</div>
 
 
 ## Open-source integrations
