updated decoder_sequence_name to "past_sequence_length + sequence_length" instead of "past_sequence_length + 1" since the output length depends on the input sequence_length which may not be 1, e.g. when filling the kv-cache

--- a/docs/source/exporters/onnx/usage_guides/export_a_model.mdx
+++ b/docs/source/exporters/onnx/usage_guides/export_a_model.mdx
@@ -388,7 +388,7 @@ class CustomMPTOnnxConfig(TextDecoderOnnxConfig):
             decoder_sequence_name = "past_sequence_length"
             name = "past_key_values"
         else:
-            decoder_sequence_name = "past_sequence_length + 1"
+            decoder_sequence_name = "past_sequence_length + sequence_length"
             name = "present"
 
         for i in range(self._normalized_config.num_layers):
