Add listed support for PatchTST

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -74,6 +74,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - Musicgen (text-conditional only)
 - Nystromformer
 - OWL-ViT
+- PatchTST
 - Pegasus
 - Perceiver
 - Phi
