Add ONNX export support for patchtsmixer

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -75,6 +75,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - Nystromformer
 - OWL-ViT
 - PatchTST
+- PatchTSMixer
 - Pegasus
 - Perceiver
 - Phi
