Add ONNX export support for IJepa

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -54,6 +54,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - OPT
 - GroupVit
 - Hubert
+- I-JEPA
 - IBert
 - LayoutLM
 - LayoutLM-v3
