Add ONNX export support for MGP-STR (#2099)
* Enable mpg-str ONNX export

* No longer needed

* Improve model patcher

* Formatting

* `ruff`

* Also support image-to-text task

* Add unit tests

* Add listed support for MGP-STR

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -65,6 +65,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - Marian
 - MarkupLM
 - MBart
+- MGP-STR
 - Mistral
 - MobileBert
 - MobileVit
