--- a/docs/source/exporters/executorch/package_reference/configuration.mdx
+++ b/docs/source/exporters/executorch/package_reference/configuration.mdx
@@ -48,7 +48,7 @@ configurations allow users to:
 
 [[autodoc]] exporters.executorch.recipe_registry.register_recipe
 
-[[autodoc]] exporters.executorch.recipe.xnnpack.export_to_executorch_with_xnnpack
+[[autodoc]] exporters.executorch.recipes.xnnpack.export_to_executorch_with_xnnpack
 
 The combination of task and recipe configurations ensures that users can customize both the high-level task setup
 and the low-level export details to suit their deployment requirements.
