Add modernbert to listed models

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -74,6 +74,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - MobileVit
 - MobileNet v1
 - MobileNet v2
+- ModernBert
 - MPNet
 - MT5
 - Musicgen (text-conditional only)
