Add ONNX export support for TextNet

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -107,6 +107,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - SwinV2
 - T5
 - Table Transformer
+- TextNet
 - TROCR
 - UniSpeech
 - UniSpeech SAT
