Add ONNX export support for `PatchTST` (#2101)
* Add ONNX export support for `PatchTST`

* Add unit test for patchtst

* Add listed support for PatchTST

* Add ONNX export support for patchtsmixer

* Add task=feature-extraction

* Fix ONNX compatible unfold

* Formatting

* Correctly handle negative indexing for onnx compatible unfold

* Update tests/exporters/exporters_utils.py

Co-authored-by: Ella Charlaix <80481427+echarlaix@users.noreply.github.com>

* Update optimum/exporters/tasks.py

Co-authored-by: Ella Charlaix <80481427+echarlaix@users.noreply.github.com>

* Move dummy patch tst input generator to input_generators.py

* Code formatting

---------

Co-authored-by: Ella Charlaix <80481427+echarlaix@users.noreply.github.com>

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -82,6 +82,8 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - OLMo
 - OLMo2
 - OWL-ViT
+- PatchTST
+- PatchTSMixer
 - Pegasus
 - Perceiver
 - Phi
