Link Optimum-ExecuTorch to parent Optimum on Hub

--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -67,6 +67,10 @@ The packages below enable you to get the best of the 🤗 Hugging Face ecosystem
       ><div class="w-full text-center bg-gradient-to-br from-pink-400 to-pink-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">ONNX Runtime</div>
       <p class="text-gray-700">Apply quantization and graph optimization to accelerate Transformers models training and inference with <span class="underline" onclick="event.preventDefault(); window.open('https://onnxruntime.ai/', '_blank');">ONNX Runtime</span></p>
     </a>
+    <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="https://github.com/huggingface/optimum-executorch"
+      ><div class="w-full text-center bg-gradient-to-br from-red-500 to-red-600 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">ExecuTorch</div>
+      <p class="text-gray-700">PyTorch’s native solution to inference on the Edge via <span class="underline" onclick="event.preventDefault(); window.open('https://pytorch.org/executorch/stable/', '_blank');">ExecuTorch</span></p>
+    </a>
     <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="./exporters/overview"
       ><div class="w-full text-center bg-gradient-to-br from-purple-400 to-purple-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Exporters</div>
       <p class="text-gray-700">Export your PyTorch or TensorFlow model to different formats such as ONNX and TFLite</p>
