--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -57,6 +57,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - Hiera
 - Hubert
 - IBert
+- InternLM2
 - LayoutLM
 - LayoutLM-v3
 - Lilt
